Add 3.0's Core module and intitial data interfaces.
Signed-off-by: Chris Larsen <clarsen@yahoo-inc.com>