@@ -81,6 +81,7 @@
   <!-- OpenTSDB modules in build order. -->
   <modules>
     <module>common</module>
+    <module>core</module>
   </modules>
 
   <!-- Dependencies shared by all modules in the OpenTSDB project. -->
@@ -139,7 +140,18 @@
   </dependencyManagement>
 
   <build>
-    
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.16</version>
+        <configuration>
+            <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+            <reportsDirectory>../target/surefire-reports</reportsDirectory>
+            <redirectTestOutputToFile>true</redirectTestOutputToFile>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
 
 </project>
